--- a/style.css
+++ b/style.css
@@ -1,383 +1,466 @@
-@import url('https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap");
 
 :root {
-    --color-letra: white;
-    --font-family-letra: "Alata", sans-serif;
+  --color-letra: white;
+  --font-family-letra: "Alata", sans-serif;
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: transparent;
-    width: 100%;
-    padding: 0 9%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: transparent;
+  width: 100%;
+  padding: 0 9%;
 }
 
 ul {
-    list-style: none;
-    display: flex;
-    gap: 25px;
-    align-items: center;
+  list-style: none;
+  display: flex;
+  gap: 25px;
+  align-items: center;
 }
 
 li a {
-    text-decoration: none;
-    color: #ffffff;
-    font-family: var(--font-family-letra);
+  text-decoration: none;
+  color: #ffffff;
+  font-family: var(--font-family-letra);
 }
 
 li a:hover {
-    border-bottom: 2px solid black;
+  border-bottom: 2px solid black;
 }
 
 .contenedor-imagen-fondo {
-    background-image: url(images/desktop/image-hero.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    width: 100%;
-    padding: 70px 20px;
-    color: white;
-    position: relative;
-    height: 100vh;
+  background-image: url(images/desktop/image-hero.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  padding: 70px 20px;
+  color: white;
+  position: relative;
+  height: 100vh;
 }
 
 .contenedor-texto-tit {
-    border: 1px solid #ffff;
-    padding: 20px;
-    position: absolute;
-    top: 40%;
-    left: 10%;
-    width: auto;
-    max-width: 38%;
+  border: 1px solid #ffff;
+  padding: 20px;
+  position: absolute;
+  top: 40%;
+  left: 10%;
+  width: auto;
+  /* max-width: 38%; */
 }
 
 h1.titulo-banner {
-    font-size: 49px;
-    line-height: 1.3;
-    font-weight: 200;
-    font-family: "Josefin Sans", sans-serif;
+  font-size: 49px;
+  line-height: 1.3;
+  font-weight: 200;
+  font-family: "Josefin Sans", sans-serif;
 }
 
 .hamburger-menu {
-    display: none;
-    flex-direction: column;
-    cursor: pointer;
-    padding: 10px;
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+  padding: 10px;
 }
 
 .hamburger-menu .bar {
-    width: 25px;
-    height: 3px;
-    background-color: white;
-    margin: 4px 0;
-    transition: 0.4s;
+  width: 25px;
+  height: 3px;
+  background-color: white;
+  margin: 4px 0;
+  transition: 0.4s;
 }
 
 /* SECCIÓN IMAGEN */
 .contenedor-seccion-informativa {
-    margin: 0 auto;
-    padding: 7rem;
-    position: relative;
-    display: flex;
+  margin: 0 auto;
+  padding: 7rem;
+  position: relative;
+  display: flex;
 }
 
 .cont-background-imagen {
-    background-image: url("images/desktop/image-interactive.jpg");
-    max-width: 731px;
-    width: 100%;
-    height: 500px;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: left;
-    padding: 2rem;
-    flex: 50%;
+  background-image: url("images/desktop/image-interactive.jpg");
+  max-width: 731px;
+  width: 100%;
+  height: 500px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: left;
+  padding: 2rem;
+  flex: 50%;
 }
 
 .cont-texto-informativo {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    padding: 6rem;
-    flex: 50%;
-    left: 54%;
-    top: 48%;
-    text-align: left;
-    background: #ffffff;
-    gap: 10px;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  padding: 6rem;
+  flex: 50%;
+  left: 54%;
+  top: 48%;
+  text-align: left;
+  background: #ffffff;
+  gap: 10px;
 }
 
 .cont-texto-informativo h2 {
-    font-family: "Josefin Sans", sans-serif;
-    font-weight: 300;
-    font-size: 40px;
-    opacity: 0.8;
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 300;
+  font-size: 40px;
+  opacity: 0.8;
 }
 
 .cont-texto-informativo p {
-    font-family: "Alata";
-    opacity: 0.6;
-    line-height: 25px;
+  font-family: "Alata";
+  opacity: 0.6;
+  line-height: 25px;
 }
 
 /* CARDS */
 .contenedor-seccion-cards {
-    padding: 7rem;
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
+  padding: 7rem;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
 }
 
 .cont-titulo-boton {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 40px;
 }
 
 .contenedor-seccion-cards h2 {
-    font-family: "Josefin Sans", sans-serif;
-    font-weight: 300;
-    font-size: 40px;
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 300;
+  font-size: 40px;
 }
 
 .boton-ver-mas-card-desk a,
 .boton-ver-mas-card-mobile a {
-    font-family: "Josefin Sans", sans-serif;
-    text-decoration: none;
-    color: black;
-    border: 2px solid black;
-    padding: 0.4rem 2rem;
-    display: flex;
+  font-family: "Josefin Sans", sans-serif;
+  text-decoration: none;
+  color: black;
+  border: 2px solid black;
+  padding: 0.4rem 2rem;
+  display: flex;
 }
 
 .cont-cards {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 20px;
-    justify-items: center;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 20px;
+  justify-items: center;
 }
 
 .card {
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    width: 100%;
-    max-width: 256px;
-    height: 450px;
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-end;
-    padding: 1rem;
-    position: relative;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  max-width: 256px;
+  height: 450px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+  padding: 1rem;
+  position: relative;
 }
 
 .card h3 {
-    font-size: 30px;
-    color: white;
-    font-family: "Josefin Sans", sans-serif;
-    font-weight: 200;
+  font-size: 30px;
+  color: white;
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 200;
 }
 
-.card:nth-child(1) { background-image: url('images/desktop/image-deep-earth.jpg'); }
-.card:nth-child(2) { background-image: url('images/desktop/image-night-arcade.jpg'); }
-.card:nth-child(3) { background-image: url('images/desktop/image-soccer-team.jpg'); }
-.card:nth-child(4) { background-image: url('images/desktop/image-grid.jpg'); }
-.card:nth-child(5) { background-image: url('images/desktop/image-from-above.jpg'); }
-.card:nth-child(6) { background-image: url('images/desktop/image-pocket-borealis.jpg'); }
-.card:nth-child(7) { background-image: url('images/desktop/image-curiosity.jpg'); }
-.card:nth-child(8) { background-image: url('images/desktop/image-fisheye.jpg'); }
+.card:nth-child(1) {
+  background-image: url("images/desktop/image-deep-earth.jpg");
+}
 
-.boton-ver-mas-card-desk a { display: block; }
-.boton-ver-mas-card-mobile a { display: none; }
+.card:nth-child(2) {
+  background-image: url("images/desktop/image-night-arcade.jpg");
+}
+
+.card:nth-child(3) {
+  background-image: url("images/desktop/image-soccer-team.jpg");
+}
+
+.card:nth-child(4) {
+  background-image: url("images/desktop/image-grid.jpg");
+}
+
+.card:nth-child(5) {
+  background-image: url("images/desktop/image-from-above.jpg");
+}
+
+.card:nth-child(6) {
+  background-image: url("images/desktop/image-pocket-borealis.jpg");
+}
+
+.card:nth-child(7) {
+  background-image: url("images/desktop/image-curiosity.jpg");
+}
+
+.card:nth-child(8) {
+  background-image: url("images/desktop/image-fisheye.jpg");
+}
+
+.boton-ver-mas-card-desk a {
+  display: block;
+}
+
+.boton-ver-mas-card-mobile a {
+  display: none;
+}
 
 /* FOOTER */
 .footer {
-    background-color: black;
+  background-color: black;
 }
 
 .contendor-footer {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin: 0 auto;
-    padding: 2rem;
-    flex-direction: row;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 0 auto;
+  padding: 2rem;
+  flex-direction: row;
 }
 
 .cont-izq-footer {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 ul.listado-op {
-    display: flex;
-    gap: 20px;
+  display: flex;
+  gap: 20px;
 }
 
 ul.listado-op li a {
-    color: var(--color-letra);
-    text-decoration: none;
-    font-family: var(--font-family-letra);
-    font-weight: 400;
+  color: var(--color-letra);
+  text-decoration: none;
+  font-family: var(--font-family-letra);
+  font-weight: 400;
 }
 
 ul.listado-op li a:hover {
-    border-bottom: 2px solid #872d8c;
+  border-bottom: 2px solid #872d8c;
 }
 
 .cont-der-footer {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .logos-redes {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    gap: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 15px;
 }
 
 .copyright p {
-    color: var(--color-letra);
-    font-family: var(--font-family-letra);
-    opacity: 0.5;
+  color: var(--color-letra);
+  font-family: var(--font-family-letra);
+  opacity: 0.5;
 }
 
 .close-menu {
-    display: none;
-    position: fixed;
-    top: 40px;
-    right: 20px;
-    font-size: 30px;
-    color: white;
-    cursor: pointer;
-    z-index: 1001;
+  background-image: url(images/icon-close.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  display: none;
+  width: 100%;
+  max-width: 30px;
+  height: 30px;
+  position: fixed;
+  left: 90%;
+  right: 0;
+  font-size: 30px;
+  color: white;
+  cursor: pointer;
+  z-index: 1001;
 }
 
-/* === MEDIA QUERIES UNIFICADAS === */
+/* -------------------------------------------------- MEDIA QUERIES ------------------------------------------- */
 @media (max-width: 768px) {
-    .hamburger-menu { display: flex; }
+  .hamburger-menu {
+    display: flex;
+  }
 
-    .hamburger-menu.active .bar:nth-child(1) {
-        transform: rotate(-45deg) translate(-5px, 6px);
-    }
+  .hamburger-menu.active .bar:nth-child(1) {
+    transform: rotate(-45deg) translate(-5px, 6px);
+  }
 
-    .hamburger-menu.active .bar:nth-child(2) {
-        opacity: 0;
-    }
+  .hamburger-menu.active .bar:nth-child(2) {
+    opacity: 0;
+  }
 
-    .hamburger-menu.active .bar:nth-child(3) {
-        transform: rotate(45deg) translate(-5px, -6px);
-    }
+  .hamburger-menu.active .bar:nth-child(3) {
+    transform: rotate(45deg) translate(-5px, -6px);
+  }
 
-    nav ul {
-        display: none;
-        flex-direction: column;
-        width: 100%;
-        position: fixed;
-        top: 0;
-        left: 0;
-        z-index: 1000;
-        background-color: black;
-        height: 100vh;
-        justify-content: center;
-        align-items: flex-start;
-        padding-left: 20px;
-    }
+  nav ul {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    background-color: black;
+    height: 100vh;
+    justify-content: center;
+    align-items: flex-start;
+    padding-left: 20px;
+  }
 
-    nav ul.active { display: flex; }
+  nav ul.active {
+    display: flex;
+  }
+  nav {
+    padding: 0;
+  }
+  .li-links a {
+    font-size: 50px;
+    font-weight: 200;
+    font-family: "Josefin Sans", sans-serif;
+  }
+  .close-menu {
+    justify-content: right;
+  }
 
-    nav li {
+  /* nav li {
         margin: 0;
         padding: 1rem;
         text-align: center;
         border-bottom: 1px solid #333;
-    }
+    } */
+  img.logo-loopstudio {
+    z-index: 1001;
+  }
 
-    .contenedor-texto-tit { max-width: 50%; }
-    h1.titulo-banner { font-size: 20px; }
+  .contenedor-imagen-fondo {
+    background-image: url("images/mobile/image-hero.jpg");
+  }
 
-    .contenedor-seccion-informativa {
-        flex-direction: column;
-        padding: 2rem;
-        justify-content: center;
-        align-items: center;
-    }
+  .contenedor-texto-tit {
+    max-width: 66%;
+    top: 30%;
+  }
 
-    .cont-background-imagen { padding: 8rem; }
+  .contenedor-seccion-informativa {
+    flex-direction: column;
+    padding: 2rem;
+    justify-content: center;
+    align-items: center;
+  }
 
-    .cont-texto-informativo {
-        position: static;
-        padding: 1rem;
-        text-align: center;
-    }
+  .cont-background-imagen {
+    padding: 12rem 0;
+  }
 
-    .cont-texto-informativo h2 { font-size: 33px; }
+  .cont-texto-informativo {
+    position: static;
+    padding: 1rem;
+    text-align: center;
+  }
 
-    .boton-ver-mas-card-desk a { display: none; }
-    .boton-ver-mas-card-mobile a {
-        display: block;
-        width: max-content;
-    }
+  .cont-texto-informativo h2 {
+    font-size: 33px;
+  }
 
-    .contenedor-seccion-cards {
-        padding: 2rem;
-        gap: 1rem;
-        align-items: center;
-    }
+  .boton-ver-mas-card-desk a {
+    display: none;
+  }
 
-    .cont-titulo-boton {
-        flex-direction: column;
-        align-items: center;
-        gap: 20px;
-    }
+  .boton-ver-mas-card-mobile a {
+    display: block;
+    width: max-content;
+  }
 
-    .cont-titulo-boton h2 {
-        font-size: 32px;
-        text-align: center;
-    }
+  .contenedor-seccion-cards {
+    padding: 2rem;
+    gap: 1rem;
+    align-items: center;
+  }
 
-    .cont-cards {
-        grid-template-columns: 1fr;
-        gap: 15px;
-        width: 100%;
-    }
+  .cont-titulo-boton {
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
 
-    .card {
-        max-width: 100%;
-        height: 120px;
-    }
+  .cont-titulo-boton h2 {
+    font-size: 32px;
+    text-align: center;
+  }
 
-    .card h3 {
-        font-size: 20px;
-        width: 70%;
-    }
+  .cont-cards {
+    grid-template-columns: 1fr;
+    gap: 15px;
+    width: 100%;
+  }
 
-    .cont-izq-footer { align-items: center; }
-    ul.listado-op { flex-direction: column; }
-    .contendor-footer {
-        flex-direction: column;
-        gap: 40px;
-    }
-    .logos-redes { justify-content: center; }
+  .card {
+    max-width: 100%;
+    height: 120px;
+  }
+
+  .card h3 {
+    font-size: 20px;
+    width: 70%;
+  }
+
+  .cont-izq-footer {
+    align-items: center;
+  }
+
+  ul.listado-op {
+    flex-direction: column;
+  }
+
+  .contendor-footer {
+    flex-direction: column;
+    gap: 40px;
+  }
+
+  .logos-redes {
+    justify-content: center;
+  }
 }
 
 @media (max-width: 576px) {
-    .cont-izq-footer { align-items: center; }
-    .ul.listado-op { flex-direction: column; }
-    .contendor-footer {
-        flex-direction: column;
-        gap: 40px;
-    }
-    .logos-redes { justify-content: center; }
+  .cont-izq-footer {
+    align-items: center;
+  }
+
+  .ul.listado-op {
+    flex-direction: column;
+  }
+
+  .contendor-footer {
+    flex-direction: column;
+    gap: 40px;
+  }
+
+  .logos-redes {
+    justify-content: center;
+  }
 }
