--- a/style.css
+++ b/style.css
@@ -1,21 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap");
 
 :root {
-  --color-letra: #ffffff;
-  --color-hover: #872d8c;
-  --color-footer: #000000;
-  --font-alata: "Alata", sans-serif;
-  --font-josefin: "Josefin Sans", sans-serif;
-  --font-size-titulo: 40px;
-  --font-size-subtitulo: 30px;
-  --font-size-nav: 16px;
-  --font-size-banner: 49px;
-  --font-size-movil-banner: 33px;
-  --font-weight-light: 200;
-  --font-weight-regular: 300;
-  --line-height-regular: 1.3;
-  --padding-global: 7rem;
-  --gap-standard: 20px;
+  --color-letra: white;
+  --font-family-letra: "Alata", sans-serif;
 }
 
 * {
@@ -42,9 +29,8 @@ ul {
 
 li a {
   text-decoration: none;
-  color: var(--color-letra);
-  font-family: var(--font-alata);
-  font-size: var(--font-size-nav);
+  color: #ffffff;
+  font-family: var(--font-family-letra);
 }
 
 li a:hover {
@@ -58,25 +44,26 @@ li a:hover {
   background-position: center;
   width: 100%;
   padding: 70px 20px;
-  color: var(--color-letra);
+  color: white;
   position: relative;
   height: 100vh;
 }
 
 .contenedor-texto-tit {
-  border: 1px solid var(--color-letra);
+  border: 1px solid #ffff;
   padding: 20px;
   position: absolute;
   top: 40%;
   left: 10%;
   width: auto;
+  max-width: 38%;
 }
 
 h1.titulo-banner {
-  font-size: var(--font-size-banner);
-  line-height: var(--line-height-regular);
-  font-weight: var(--font-weight-light);
-  font-family: var(--font-josefin);
+  font-size: 49px;
+  line-height: 1.3;
+  font-weight: 200;
+  font-family: "Josefin Sans", sans-serif;
 }
 
 .hamburger-menu {
@@ -89,14 +76,15 @@ h1.titulo-banner {
 .hamburger-menu .bar {
   width: 25px;
   height: 3px;
-  background-color: var(--color-letra);
+  background-color: white;
   margin: 4px 0;
   transition: 0.4s;
 }
 
+/* SECCIÓN IMAGEN */
 .contenedor-seccion-informativa {
   margin: 0 auto;
-  padding: var(--padding-global);
+  padding: 7rem;
   position: relative;
   display: flex;
 }
@@ -122,25 +110,26 @@ h1.titulo-banner {
   left: 54%;
   top: 48%;
   text-align: left;
-  background: var(--color-letra);
+  background: #ffffff;
   gap: 10px;
 }
 
 .cont-texto-informativo h2 {
-  font-family: var(--font-josefin);
-  font-weight: var(--font-weight-regular);
-  font-size: var(--font-size-titulo);
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 300;
+  font-size: 40px;
   opacity: 0.8;
 }
 
 .cont-texto-informativo p {
-  font-family: var(--font-alata);
+  font-family: "Alata";
   opacity: 0.6;
   line-height: 25px;
 }
 
+/* CARDS */
 .contenedor-seccion-cards {
-  padding: var(--padding-global);
+  padding: 7rem;
   display: flex;
   flex-direction: column;
   gap: 40px;
@@ -154,14 +143,14 @@ h1.titulo-banner {
 }
 
 .contenedor-seccion-cards h2 {
-  font-family: var(--font-josefin);
-  font-weight: var(--font-weight-regular);
-  font-size: var(--font-size-titulo);
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 300;
+  font-size: 40px;
 }
 
 .boton-ver-mas-card-desk a,
 .boton-ver-mas-card-mobile a {
-  font-family: var(--font-josefin);
+  font-family: "Josefin Sans", sans-serif;
   text-decoration: none;
   color: black;
   border: 2px solid black;
@@ -191,20 +180,43 @@ h1.titulo-banner {
 }
 
 .card h3 {
-  font-size: var(--font-size-subtitulo);
-  color: var(--color-letra);
-  font-family: var(--font-josefin);
-  font-weight: var(--font-weight-light);
+  font-size: 30px;
+  color: white;
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 200;
 }
 
-.card:nth-child(1) { background-image: url("images/desktop/image-deep-earth.jpg"); }
-.card:nth-child(2) { background-image: url("images/desktop/image-night-arcade.jpg"); }
-.card:nth-child(3) { background-image: url("images/desktop/image-soccer-team.jpg"); }
-.card:nth-child(4) { background-image: url("images/desktop/image-grid.jpg"); }
-.card:nth-child(5) { background-image: url("images/desktop/image-from-above.jpg"); }
-.card:nth-child(6) { background-image: url("images/desktop/image-pocket-borealis.jpg"); }
-.card:nth-child(7) { background-image: url("images/desktop/image-curiosity.jpg"); }
-.card:nth-child(8) { background-image: url("images/desktop/image-fisheye.jpg"); }
+.card:nth-child(1) {
+  background-image: url("images/desktop/image-deep-earth.jpg");
+}
+
+.card:nth-child(2) {
+  background-image: url("images/desktop/image-night-arcade.jpg");
+}
+
+.card:nth-child(3) {
+  background-image: url("images/desktop/image-soccer-team.jpg");
+}
+
+.card:nth-child(4) {
+  background-image: url("images/desktop/image-grid.jpg");
+}
+
+.card:nth-child(5) {
+  background-image: url("images/desktop/image-from-above.jpg");
+}
+
+.card:nth-child(6) {
+  background-image: url("images/desktop/image-pocket-borealis.jpg");
+}
+
+.card:nth-child(7) {
+  background-image: url("images/desktop/image-curiosity.jpg");
+}
+
+.card:nth-child(8) {
+  background-image: url("images/desktop/image-fisheye.jpg");
+}
 
 .boton-ver-mas-card-desk a {
   display: block;
@@ -214,8 +226,9 @@ h1.titulo-banner {
   display: none;
 }
 
+/* FOOTER */
 .footer {
-  background-color: var(--color-footer);
+  background-color: black;
 }
 
 .contendor-footer {
@@ -230,43 +243,41 @@ h1.titulo-banner {
 .cont-izq-footer {
   display: flex;
   flex-direction: column;
-  gap: var(--gap-standard);
-  align-items: center;
+  gap: 20px;
 }
 
 ul.listado-op {
   display: flex;
-  gap: var(--gap-standard);
-  flex-direction: column;
+  gap: 20px;
 }
 
 ul.listado-op li a {
   color: var(--color-letra);
   text-decoration: none;
-  font-family: var(--font-alata);
+  font-family: var(--font-family-letra);
   font-weight: 400;
 }
 
 ul.listado-op li a:hover {
-  border-bottom: 2px solid var(--color-hover);
+  border-bottom: 2px solid #872d8c;
 }
 
 .cont-der-footer {
   display: flex;
   flex-direction: column;
-  gap: var(--gap-standard);
+  gap: 20px;
 }
 
 .logos-redes {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
   gap: 15px;
 }
 
 .copyright p {
   color: var(--color-letra);
-  font-family: var(--font-alata);
+  font-family: var(--font-family-letra);
   opacity: 0.5;
 }
 
@@ -280,13 +291,14 @@ ul.listado-op li a:hover {
   height: 30px;
   position: fixed;
   left: 90%;
+  right: 0;
   font-size: 30px;
-  color: var(--color-letra);
+  color: white;
   cursor: pointer;
   z-index: 1001;
 }
 
-/* MEDIA QUERIES */
+/* -------------------------------------------------- MEDIA QUERIES ------------------------------------------- */
 @media (max-width: 768px) {
   .hamburger-menu {
     display: flex;
@@ -322,15 +334,21 @@ ul.listado-op li a:hover {
   nav ul.active {
     display: flex;
   }
-
   nav {
     padding: 0;
   }
-
   .li-links a {
     font-size: 50px;
-    font-weight: var(--font-weight-light);
-    font-family: var(--font-josefin);
+    font-weight: 200;
+    font-family: "Josefin Sans", sans-serif;
+  }
+  .close-menu {
+    justify-content: right;
+  }
+
+
+  img.logo-loopstudio {
+    z-index: 1001;
   }
 
   .contenedor-imagen-fondo {
@@ -360,7 +378,7 @@ ul.listado-op li a:hover {
   }
 
   .cont-texto-informativo h2 {
-    font-size: var(--font-size-movil-banner);
+    font-size: 33px;
   }
 
   .boton-ver-mas-card-desk a {
@@ -381,11 +399,11 @@ ul.listado-op li a:hover {
   .cont-titulo-boton {
     flex-direction: column;
     align-items: center;
-    gap: var(--gap-standard);
+    gap: 20px;
   }
 
   .cont-titulo-boton h2 {
-    font-size: var(--font-size-movil-banner);
+    font-size: 32px;
     text-align: center;
   }
 
@@ -405,12 +423,33 @@ ul.listado-op li a:hover {
     width: 70%;
   }
 
+  .cont-izq-footer {
+    align-items: center;
+  }
+
+  ul.listado-op {
+    flex-direction: column;
+  }
+
+  .contendor-footer {
+    flex-direction: column;
+    gap: 40px;
+  }
+
   .logos-redes {
     justify-content: center;
   }
 }
 
 @media (max-width: 576px) {
+  .cont-izq-footer {
+    align-items: center;
+  }
+
+  .ul.listado-op {
+    flex-direction: column;
+  }
+
   .contendor-footer {
     flex-direction: column;
     gap: 40px;
