--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
 
 :root {
   --color-letra: white;
-  --font-family-letra: "Alata", sans-serif;
+  --font-family-alata: "Alata", sans-serif;
+  --font-family-josefin: "Josefin Sans", sans-serif;
 }
 
 * {
@@ -10,6 +11,19 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+@media (min-width: 992px) {
+
+
+  .contenedor-seccion-informativa,
+  .contenedor-seccion-cards,
+  .contendor-footer {
+    max-width: 1440px;
+    margin: auto;
+  }
+}
+
+
 
 nav {
   display: flex;
@@ -27,14 +41,32 @@ ul {
   align-items: center;
 }
 
-li a {
+li.li-links a {
   text-decoration: none;
   color: #ffffff;
-  font-family: var(--font-family-letra);
+  font-family: var(--font-family-alata);
 }
 
-li a:hover {
-  border-bottom: 2px solid white;
+.li-links {
+  position: relative;
+}
+
+li.li-links a::after {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 30px;
+  background-color: white;
+  height: 2px;
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 0;
+  transition: all 500ms ease;
+
+}
+
+li.li-links a:hover::after {
+  opacity: 1;
 }
 
 .contenedor-imagen-fondo {
@@ -63,7 +95,7 @@ h1.titulo-banner {
   font-size: 49px;
   line-height: 1.3;
   font-weight: 200;
-  font-family: "Josefin Sans", sans-serif;
+  font-family: var(--font-family-josefin);
 }
 
 .hamburger-menu {
@@ -115,7 +147,7 @@ h1.titulo-banner {
 }
 
 .cont-texto-informativo h2 {
-  font-family: "Josefin Sans", sans-serif;
+  font-family: var(--font-family-josefin);
   font-weight: 300;
   font-size: 40px;
   opacity: 0.8;
@@ -143,14 +175,14 @@ h1.titulo-banner {
 }
 
 .contenedor-seccion-cards h2 {
-  font-family: "Josefin Sans", sans-serif;
+  font-family: var(--font-family-josefin);
   font-weight: 300;
   font-size: 40px;
 }
 
 .boton-ver-mas-card-desk a,
 .boton-ver-mas-card-mobile a {
-  font-family: "Josefin Sans", sans-serif;
+  font-family: var(--font-family-josefin);
   text-decoration: none;
   color: black;
   border: 2px solid black;
@@ -165,6 +197,7 @@ h1.titulo-banner {
   color: white;
 
 }
+
 .cont-cards {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -185,18 +218,19 @@ h1.titulo-banner {
   padding: 1rem;
   position: relative;
 
-  
-  }
+  cursor: pointer;
 
- 
+}
+
+
 
 .card:hover {
-  opacity: 0.9; 
+  opacity: 0.6;
 }
 
 .card:hover h3 {
   color: black;
-  font-weight: 300; 
+  font-weight: 300;
   font-size: 30px;
 }
 
@@ -205,7 +239,7 @@ h1.titulo-banner {
 .card h3 {
   font-size: 30px;
   color: white;
-  font-family: "Josefin Sans", sans-serif;
+  font-family: var(--font-family-josefin);
   font-weight: 200;
 }
 
@@ -278,13 +312,31 @@ ul.listado-op {
 ul.listado-op li a {
   color: var(--color-letra);
   text-decoration: none;
-  font-family: var(--font-family-letra);
+  font-family: var(--font-family-alata);
   font-weight: 400;
 }
 
-ul.listado-op li a:hover {
-  border-bottom: 2px solid #872d8c;
+
+
+.li-links-footer a::after, a.link-redes-sociales::after{
+  content: '';
+  display: block;
+  position: absolute;
+  width: 20px;
+  background-color: white;
+  height: 2px;
+  opacity: 0;
+  transition: all 500ms ease;
+
+
 }
+
+.li-links-footer a:hover::after, a.link-redes-sociales:hover::after{
+  opacity: 1;
+}
+
+
+
 
 .cont-der-footer {
   display: flex;
@@ -298,10 +350,18 @@ ul.listado-op li a:hover {
   justify-content: flex-end;
   gap: 15px;
 }
+.link-redes-sociales{
+  cursor: pointer;
 
+}
+.link-redes-sociales img{
+  max-width: 30px;
+  width: 100%;
+  height: 30px;
+}
 .copyright p {
   color: var(--color-letra);
-  font-family: var(--font-family-letra);
+  font-family: var(--font-family-alata);
   opacity: 0.5;
 }
 
@@ -358,14 +418,17 @@ ul.listado-op li a:hover {
   nav ul.active {
     display: flex;
   }
+
   nav {
     padding: 0;
   }
+
   .li-links a {
     font-size: 50px;
     font-weight: 200;
-    font-family: "Josefin Sans", sans-serif;
+    font-family: var(--font-family-josefin);
   }
+
   .close-menu {
     justify-content: right;
   }
